# AnimaKit

./: .gitignore  Animation.go  Cargo.toml  ColorMixer.go  Common.go  CommonInterp.go  Gif.go  Gopkg.toml  HiBitStage.go  Image.go  Interpolator.go  Interpolator_test.go  JS.go  LICENSE.md  Makefile  MultiInterpᐸF64ᐳ.go  MultiInterpᐸboolᐳ.go  Pos.go  Preview.go  Rect.go  Render.go  TODO.md  Viz.go  Watcher.go  common_interpolations.go  dyon.sublime-syntax  font.go  img.go  mapper.go
cmd/: Makefile  main.go
cmd/animakit/: main.go
examples/: boring_square.js  less_boring_square.js  moving_animated_gif.js  typewriter.dyon  typewriter.js  typewriter.lua
res/: Animation.js  GIF.js  HiBitStage.js  Image.js  unifont.ttf.txt
src/: lib.rs  script.rs
